# kayobe

./: .ansible-lint  .coveragerc  .gitignore  .gitreview  .stestr.conf  .travis.yml  .yamllint  AGENTS.md  CONTRIBUTING.rst  HACKING.rst  PROBLEMS  README.md  README.rst  Vagrantfile  bindep.txt  bootstrap.sh  configure-kayobe.sh  deploy-overcloud.sh  deploy-seed.sh  kayobe-config-dump  kayobe-playbook  lint-requirements.txt  molecule-requirements.txt  provision-overcloud.sh  provision-seed.sh  requirements.txt  requirements.yml  setup.cfg  setup.py  test-requirements.txt  tox.ini
.agents/scripts/: agent-environment.sh
.github/: ISSUE_TEMPLATE.md
.github/workflows/: tag-and-release.yml
ansible/: apparmor-libvirt.yml  apt.yml  baremetal-compute-inspect.yml  baremetal-compute-introspection-data-save.yml  baremetal-compute-manage.yml  baremetal-compute-provide.yml  baremetal-compute-register.yml  baremetal-compute-rename.yml  baremetal-compute-serial-console-post-config.yml  baremetal-compute-serial-console.yml  bifrost-introspection-rules.yml  bootstrap.yml  cadvisor.yml  ceph-block-devices.yml  compute-libvirt-host.yml  compute-node-discovery.yml  compute-node-flavors.yml  compute-node-provide.yml  container-engine.yml  container-image-build.yml  container-image-builders-check.yml  control-host-configure.yml  dell-compute-node-boot-mode.yml  dell-compute-node-discovery.yml  dell-compute-node-inventory.yml  dell-switch-bmp.yml  dev-tools.yml  disable-cloud-init.yml  disable-glean.yml  disable-selinux.yml  dnf.yml  docker-devicemapper.yml  docker-registry.yml  docker.yml  drac-bios.yml  drac-boot-order.yml  drac-facts.yml  dump-config.yml  etc-hosts.yml  external-net.yml  (+106 more)
ansible/action_plugins/: kayobe_container.py  kayobe_container_image.py  kayobe_container_image_info.py  kayobe_container_login.py  kayobe_container_volume.py  kolla_ansible_host_vars.py  merge_configs.py  merge_yaml.py  template_content.py
ansible/filter_plugins/: bmc_type.py  networkd.py  networks.py  nmstate.py  switches.py
ansible/inventory/: hosts
ansible/lookup_plugins/: cached.py  kayobe_environments.py  kayobe_path.py
ansible/test_plugins/: functional.py
dev/: ansible-control-host-configure.sh  config.sh  configure-firewall.sh  dev-hosts  dev-vagrant-network-allocation.yml  dev-vagrant.yml  environment-setup.sh  functions  infra-vm-deploy.sh  install-dev.sh  install.sh  kayobe-control-host-become-sudo-checker  kolla-control-host-become-sudo-checker  overcloud-deploy.sh  overcloud-test-baremetal.sh  overcloud-test-bounce-interface.sh  overcloud-test-inspect.sh  overcloud-test-vm.sh  overcloud-test.sh  overcloud-upgrade.sh  ovs-vsctl  playbook-run.sh  rabbitmq-migrate-queues.sh  rabbitmq-pre-slurp-upgrade.sh  seed-deploy.sh  seed-hypervisor-deploy.sh  seed-upgrade.sh  tenks-deploy-compute.sh  tenks-deploy-config-compute-libvirt-on-host.yml  tenks-deploy-config-compute.yml  tenks-deploy-config-overcloud.yml  tenks-deploy-config.yml  tenks-deploy-overcloud.sh  tenks-deploy.sh  tenks-teardown-compute.sh  tenks-teardown-overcloud.sh  tenks-teardown.sh
doc/: requirements.txt
doc/source/: administration.rst  architecture.rst  centos8.rst  conf.py  configuration.rst  contributing.rst  control-plane-service-placement.rst  custom-ansible-playbooks.rst  deployment.rst  development.rst  getting-started.rst  index.rst  installation.rst  multiple-environments.rst  release-notes.rst  resources.rst  support-matrix.rst  upgrading.rst  usage.rst
doc/test/: redirect-tests.txt
etc/kayobe/: ansible-control.yml  apt.yml  bifrost.yml  ceph.yml  compute.yml  controllers.yml  dell-switch-bmp.yml  dnf.yml  docker-registry.yml  globals.yml  grafana.yml  hostname.yml  idrac.yml  infra-vms.yml  inspector.yml  ipa.yml  ironic.yml  kolla.yml  monitoring.yml  networks.yml  neutron.yml  nova.yml  ntp.yml  openstack.yml  overcloud-dib.yml  overcloud.yml  pip.yml  seed-hypervisor.yml  seed-vm.yml  seed.yml  storage.yml  time.yml  trust-store.yml  yum-cron.yml  yum.yml
kayobe/: ansible.py  environment.py  exception.py  kolla_ansible.py  utils.py  vault.py  version.py
kayobe/cli/: commands.py
kayobe/cmd/: kayobe.py  kayobe_vault_password_helper.py
playbooks/: README.rst
playbooks/kayobe-ansible-control-host-configure-base/: overrides.yml.j2  pre.yml  run.yml
playbooks/kayobe-base/: overrides.yml.j2  post.yml  pre.yml
playbooks/kayobe-infra-vm-base/: infra-vms-group-vars.j2  overrides.yml.j2  pre.yml  run.yml
playbooks/kayobe-overcloud-base/: baremetal-compute.j2  baremetal.j2  globals.yml.j2  overrides.yml.j2  post.yml  pre.yml  run.yml
playbooks/kayobe-overcloud-host-configure-base/: globals.yml.j2  overrides.yml.j2  pre.yml  run.yml
playbooks/kayobe-overcloud-upgrade-base/: globals.yml.j2  overrides.yml.j2  post.yml  pre.yml  run.yml
playbooks/kayobe-seed-base/: bifrost-overrides.yml.j2  overrides.yml.j2  post.yml  pre.yml  run.yml
playbooks/kayobe-seed-upgrade-base/: bifrost-overrides.yml.j2  globals.yml.j2  overrides.yml.j2  pre.yml  run.yml
playbooks/kayobe-seed-vm-base/: overrides.yml.j2  pre.yml  run.yml  seed-group-vars.j2
playbooks/kayobe-tox-ansible-syntax/: pre.yml
playbooks/kayobe-tox-molecule/: pre.yml
releasenotes/notes/: add-admin-network.yml-cf4b5e6387d0eb3f.yaml  add-apt-proxy-support-f688702868095ed0.yaml  add-baremetal-compute-introspection-data-save-55d25300e5fa4219.yaml  add-bridge-stp-option-9be6bf35f6425548.yaml  add-command-hooks-827aa0732b7399de.yaml  add-command-to-run-config-validation-351df61eb6094d66.yaml  add-control-host-service-destroy-deploy-skeleton-1297979c046e298e.yaml  add-custom-config-for-elasticsearch-a762134e51b50f91.yaml  add-custom-rabbitmq-conf-7c3927e1024f0be1.yaml  add-custom-rabbitmq-conf-8e67ac6a9c7f43e1.yaml  add-custom-user-data-content-d188c7c197b50acb.yaml  add-monasca-3e6da709b3b4c269.yaml  (+564 more)
roles/: README.rst
tools/: ansible-galaxy-retried.sh  configure-kayobe.sh  feature-flags.py  kolla-feature-flags.sh  loc  release.sh  run-bashate.sh  sphinx8  test-ansible.sh  test-molecule.sh
zuul.d/: jobs.yaml  nodesets.yaml  project.yaml
(+790 files in other folders)
