[metadata]
name = kayobe
summary =
    Deployment of OpenStack to bare metal using OpenStack kolla and bifrost
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://kayobe.readthedocs.io/en/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    kayobe

[entry_points]
console_scripts=
    kayobe = kayobe.cmd.kayobe:main
    kayobe-vault-password-helper = kayobe.cmd.kayobe_vault_password_helper:main

kayobe.cli=
    baremetal_compute_inspect = kayobe.cli.commands:BaremetalComputeInspect
    baremetal_compute_manage = kayobe.cli.commands:BaremetalComputeManage
    baremetal_compute_provide = kayobe.cli.commands:BaremetalComputeProvide
    baremetal_compute_rename = kayobe.cli.commands:BaremetalComputeRename
    control_host_bootstrap = kayobe.cli.commands:ControlHostBootstrap
    control_host_upgrade = kayobe.cli.commands:ControlHostUpgrade
    configuration_dump = kayobe.cli.commands:ConfigurationDump
    kolla_ansible_run = kayobe.cli.commands:KollaAnsibleRun
    network_connectivity_check = kayobe.cli.commands:NetworkConnectivityCheck
    overcloud_bios_raid_configure = kayobe.cli.commands:OvercloudBIOSRAIDConfigure
    overcloud_container_image_build = kayobe.cli.commands:OvercloudContainerImageBuild
    overcloud_container_image_pull = kayobe.cli.commands:OvercloudContainerImagePull
    overcloud_deployment_image_build = kayobe.cli.commands:OvercloudDeploymentImageBuild
    overcloud_deprovision = kayobe.cli.commands:OvercloudDeprovision
    overcloud_hardware_inspect = kayobe.cli.commands:OvercloudHardwareInspect
    overcloud_host_configure = kayobe.cli.commands:OvercloudHostConfigure
    overcloud_host_upgrade = kayobe.cli.commands:OvercloudHostUpgrade
    overcloud_introspection_data_save = kayobe.cli.commands:OvercloudIntrospectionDataSave
    overcloud_inventory_discover = kayobe.cli.commands:OvercloudInventoryDiscover
    overcloud_post_configure = kayobe.cli.commands:OvercloudPostConfigure
    overcloud_provision = kayobe.cli.commands:OvercloudProvision
    overcloud_service_configuration save = kayobe.cli.commands:OvercloudServiceConfigurationSave
    overcloud_service_configuration generate = kayobe.cli.commands:OvercloudServiceConfigurationGenerate
    overcloud_service_deploy = kayobe.cli.commands:OvercloudServiceDeploy
    overcloud_service_destroy = kayobe.cli.commands:OvercloudServiceDestroy
    overcloud_service_reconfigure = kayobe.cli.commands:OvercloudServiceReconfigure
    overcloud_service_upgrade = kayobe.cli.commands:OvercloudServiceUpgrade
    physical_network_configure = kayobe.cli.commands:PhysicalNetworkConfigure
    playbook_run = kayobe.cli.commands:PlaybookRun
    seed_container_image_build = kayobe.cli.commands:SeedContainerImageBuild
    seed_deployment_image_build = kayobe.cli.commands:SeedDeploymentImageBuild
    seed_host_configure = kayobe.cli.commands:SeedHostConfigure
    seed_host_upgrade = kayobe.cli.commands:SeedHostUpgrade
    seed_hypervisor_host_configure = kayobe.cli.commands:SeedHypervisorHostConfigure
    seed_hypervisor_host_upgrade = kayobe.cli.commands:SeedHypervisorHostUpgrade
    seed_service_deploy = kayobe.cli.commands:SeedServiceDeploy
    seed_vm_deprovision = kayobe.cli.commands:SeedVMDeprovision
    seed_vm_provision = kayobe.cli.commands:SeedVMProvision
