[metadata]
name = kayobe
summary = Deployment of OpenStack to bare metal using OpenStack kolla and bifrost
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/kayobe/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

# In below section we have to include the roles directory explicitly
# to Workaround PBR bug:
#     source prefix replaced globally, see:
#     https://bugs.launchpad.net/pbr/+bug/1810804
[files]
packages =
    kayobe
data_files =
    share/kayobe/ansible = ansible/*
    share/kayobe/ansible/roles = ansible/roles/*
    share/kayobe/doc = doc/*
    share/kayobe/etc_examples = etc/*
    share/kayobe = setup.cfg
    share/kayobe = requirements.yml

[entry_points]
console_scripts=
    kayobe = kayobe.cmd.kayobe:main
    kayobe-vault-password-helper = kayobe.cmd.kayobe_vault_password_helper:main

kayobe.cli=
    baremetal_compute_inspect = kayobe.cli.commands:BaremetalComputeInspect
    baremetal_compute_manage = kayobe.cli.commands:BaremetalComputeManage
    baremetal_compute_provide = kayobe.cli.commands:BaremetalComputeProvide
    baremetal_compute_rename = kayobe.cli.commands:BaremetalComputeRename
    baremetal_compute_update_deployment_image = kayobe.cli.commands:BaremetalComputeUpdateDeploymentImage
    baremetal_compute_serial_console_enable = kayobe.cli.commands:BaremetalComputeSerialConsoleEnable
    baremetal_compute_serial_console_disable = kayobe.cli.commands:BaremetalComputeSerialConsoleDisable
    control_host_bootstrap = kayobe.cli.commands:ControlHostBootstrap
    control_host_upgrade = kayobe.cli.commands:ControlHostUpgrade
    configuration_dump = kayobe.cli.commands:ConfigurationDump
    kolla_ansible_run = kayobe.cli.commands:KollaAnsibleRun
    network_connectivity_check = kayobe.cli.commands:NetworkConnectivityCheck
    overcloud_bios_raid_configure = kayobe.cli.commands:OvercloudBIOSRAIDConfigure
    overcloud_container_image_build = kayobe.cli.commands:OvercloudContainerImageBuild
    overcloud_container_image_pull = kayobe.cli.commands:OvercloudContainerImagePull
    overcloud_database_backup = kayobe.cli.commands:OvercloudDatabaseBackup
    overcloud_database_recover = kayobe.cli.commands:OvercloudDatabaseRecover
    overcloud_deployment_image_build = kayobe.cli.commands:OvercloudDeploymentImageBuild
    overcloud_deprovision = kayobe.cli.commands:OvercloudDeprovision
    overcloud_hardware_inspect = kayobe.cli.commands:OvercloudHardwareInspect
    overcloud_host_configure = kayobe.cli.commands:OvercloudHostConfigure
    overcloud_host_package_update = kayobe.cli.commands:OvercloudHostPackageUpdate
    overcloud_host_command_run = kayobe.cli.commands:OvercloudHostCommandRun
    overcloud_host_upgrade = kayobe.cli.commands:OvercloudHostUpgrade
    overcloud_introspection_data_save = kayobe.cli.commands:OvercloudIntrospectionDataSave
    overcloud_inventory_discover = kayobe.cli.commands:OvercloudInventoryDiscover
    overcloud_post_configure = kayobe.cli.commands:OvercloudPostConfigure
    overcloud_provision = kayobe.cli.commands:OvercloudProvision
    overcloud_service_configuration_save = kayobe.cli.commands:OvercloudServiceConfigurationSave
    overcloud_service_configuration_generate = kayobe.cli.commands:OvercloudServiceConfigurationGenerate
    overcloud_service_deploy = kayobe.cli.commands:OvercloudServiceDeploy
    overcloud_service_deploy_containers = kayobe.cli.commands:OvercloudServiceDeployContainers
    overcloud_service_destroy = kayobe.cli.commands:OvercloudServiceDestroy
    overcloud_service_reconfigure = kayobe.cli.commands:OvercloudServiceReconfigure
    overcloud_service_stop = kayobe.cli.commands:OvercloudServiceStop
    overcloud_service_upgrade = kayobe.cli.commands:OvercloudServiceUpgrade
    overcloud_swift_rings_generate = kayobe.cli.commands:OvercloudSwiftRingsGenerate
    physical_network_configure = kayobe.cli.commands:PhysicalNetworkConfigure
    playbook_run = kayobe.cli.commands:PlaybookRun
    seed_container_image_build = kayobe.cli.commands:SeedContainerImageBuild
    seed_deployment_image_build = kayobe.cli.commands:SeedDeploymentImageBuild
    seed_host_configure = kayobe.cli.commands:SeedHostConfigure
    seed_host_package_update = kayobe.cli.commands:SeedHostPackageUpdate
    seed_host_command_run = kayobe.cli.commands:SeedHostCommandRun
    seed_host_upgrade = kayobe.cli.commands:SeedHostUpgrade
    seed_hypervisor_host_configure = kayobe.cli.commands:SeedHypervisorHostConfigure
    seed_hypervisor_host_command_run = kayobe.cli.commands:SeedHypervisorHostCommandRun
    seed_hypervisor_host_package_update = kayobe.cli.commands:SeedHypervisorHostPackageUpdate
    seed_hypervisor_host_upgrade = kayobe.cli.commands:SeedHypervisorHostUpgrade
    seed_service_deploy = kayobe.cli.commands:SeedServiceDeploy
    seed_service_upgrade = kayobe.cli.commands:SeedServiceUpgrade
    seed_vm_deprovision = kayobe.cli.commands:SeedVMDeprovision
    seed_vm_provision = kayobe.cli.commands:SeedVMProvision
